--- a/Docker_Enviroments/ML_DS/.devcontainer/devcontainer.json
+++ b/Docker_Enviroments/ML_DS/.devcontainer/devcontainer.json
@@ -27,8 +27,5 @@
 	"forwardPorts": [8888],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pip3 install -r requirements.txt",
-
-	// Comment out to connect as root instead.
-	"remoteUser": "vscode"
+	"postCreateCommand": ["pip3 install -r .devcontainer/requirements.txt", "jupyter notebook"]
 }
