--- a/Golang/.devcontainer/devcontainer.json
+++ b/Golang/.devcontainer/devcontainer.json
@@ -1,34 +1,55 @@
 {
-	"name": "Go",
-	"build": {
-		"dockerfile": "Dockerfile",
-
-	},
-	"runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
-
-	// Set *default* container specific settings.json values on container create.
-	"settings": {
-        "terminal.integrated.profiles.linux": "/bin/zsh", 
-		"go.toolsManagement.checkForUpdates": "local",
-		"go.gopath": "/go",
-		"go.useLanguageServer": true,
+    "name": "Go",
+    "build": {
+        "dockerfile": "Dockerfile",
+    },
+    "runArgs": [
+        "--cap-add=SYS_PTRACE",
+        "--security-opt",
+        "seccomp=unconfined"
+    ],
+    // "workspaceFolder": "/workspace",
+    // Set *default* container specific settings.json values on container create.
+    "settings": {
+        "go.toolsManagement.checkForUpdates": "local",
+        "go.gopath": "/go",
+        "go.useLanguageServer": true,
+        // "go.install.tools": true,
         "workbench.colorTheme": "Night Owl",
-		"workbench.iconTheme": "Sweet Vscode icons",
-		"gopls": {
+        "workbench.iconTheme": "Sweet Vscode icons",
+        "gopls": {
             "usePlaceholders": false,
             "staticcheck": true
         },
         "go.autocompleteUnimportedPackages": true,
         "go.gotoSymbol.includeImports": true,
         "go.gotoSymbol.includeGoroot": true,
-        "go.lintTool": "golangci-lint"
-	},
-	
-	// Add the IDs of extensions you want installed when the container is created.
-	"extensions": [
-		"golang.Go",
+        "go.lintTool": "golangci-lint",
+        "go.buildOnSave": "workspace",
+        "go.lintOnSave": "workspace",
+        "go.vetOnSave": "workspace",
+        "editor.formatOnSave": true,
+        "go.toolsEnvVars": {
+            "GOFLAGS": "-tags=",
+            "CGO_ENABLED": 1 // for the race detector
+        },
+        "gopls.env": {
+            "GOFLAGS": "-tags="
+        },
+        "go.testEnvVars": {
+            "": "",
+        },
+        "go.testFlags": [
+            "-v",
+            "-race"
+        ]
+    },
+    // Add the IDs of extensions you want installed when the container is created.
+    "extensions": [
+        "golang.Go",
         "sdras.night-owl",
-		"eamodio.gitlens",
-		"eliverlara.sweet-vscode-icons"
-	]
+        "eamodio.gitlens",
+        "eliverlara.sweet-vscode-icons"
+    ],
+    "postCreateCommand": "bash .devcontainer/go_extensions.sh"
 }
