--- a/Django_PSQL/.devcontainer/devcontainer.json
+++ b/Django_PSQL/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
     "name":"Python and PostgreSQL",
 
 	"dockerComposeFile": "docker-compose.yml",
-	"workspaceFolder" : "/code",
+	"workspaceFolder" : "/name_app",
 	"service": "web",
     "settings":{
 		"python.pythonPath": "/usr/local/bin/python",
@@ -26,5 +26,5 @@
 	"forwardPorts": [8000, 8080, 5432, 54275],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pip3 install -r requirements.txt"
+	"postCreateCommand": "python3 manage.py runserver 0.0.0.0:8000"
 }
